implemented Foreign Function & Memory API support